--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  material_design_icons_flutter: ^7.0.7296
+  loading_animation_widget: ^1.3.0
+  get: ^4.6.6
+  sizer: ^3.0.5
+  connectivity_plus: ^6.1.3
+  dio: ^5.8.0+1
+  shared_preferences: ^2.5.2
+  google_sign_in: ^6.3.0
+  lottie: ^3.3.1
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
+  flutter_svg: ^2.0.17
+  awesome_icons:
+
   flutter:
     sdk: flutter
 
@@ -36,12 +50,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
-  loading_animation_widget: ^1.3.0
-  get: ^4.6.6
-  sizer: ^3.0.5
-  firebase_auth: ^5.5.1
-  firebase_core: ^3.12.1
-  flutter_svg: ^2.0.17
+
   flutter_test:
     sdk: flutter
 
