--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   dio: ^5.8.0+1
   shared_preferences: ^2.5.2
   google_sign_in: ^6.3.0
+  http: ^1.4.0
   lottie: ^3.3.1
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
