--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,15 @@ dependencies:
   loading_animation_widget: ^1.3.0
   get: ^4.6.6
   sizer: ^3.0.5
-  connectivity_plus: ^6.1.3
+  connectivity_plus: any
   dio: ^5.8.0+1
   shared_preferences: ^2.5.2
   google_sign_in: ^6.3.0
+  file_picker: ^10.2.0
   http: ^1.4.0
+  image_picker: ^1.1.2
   lottie: ^3.3.1
-  firebase_auth: ^5.5.1
+  firebase_auth: any
   firebase_core: ^3.12.1
   flutter_svg: ^2.0.17
   awesome_icons:
