--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   shared_preferences: ^2.5.2
   google_sign_in: ^6.3.0
   file_picker: ^10.2.0
+  path_provider: ^2.1.5
+  flutter_image_compress: ^2.1.0
   http: ^1.4.0
   image_picker: ^1.1.2
   lottie: ^3.3.1
