--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,6 +21,8 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
+
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.shaktihub"
         // You can update the following values to match your application needs.
@@ -33,6 +35,8 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled false
+            shrinkResources false
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
