--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   chewie: ^1.7.0
   video_player: ^2.8.1
   cached_network_image: ^3.3.1
+  video_compress: ^3.1.4
   material_design_icons_flutter: ^7.0.7296
   loading_animation_widget: ^1.3.0
   get: ^4.6.6
